NewK8s/Bai4_Service_expose_traffic/hello-redis.yaml
# Hoặc tạo bằng cli cho nhanh: kubectl run hello-redis --image=080196/hello-redis
apiVersion: v1
kind: Pod
metadata:
  name: application
spec:
  containers:
    - image: 080196/hello-redis
      name: application
