NewK8s/Bai4_Service_expose_traffic/hello-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
    - host: kubia.example.com # domain name
  http:
    paths:
      - path: /bar
        backend:
          serviceName: kubia-bar # name of the service inside cluster
          servicePort: 80
      - path: /foo
        backend:
          serviceName: kubia-foo # name of the service inside cluster
          servicePort: 80
